--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -1,3 +1,6 @@
+@import "./animations.scss";
+@import "./fog.scss";
+
 $colors: (
   primary: #666,
   background: #000,
@@ -37,8 +40,8 @@ body {
   position: relative;
   margin-right: auto;
   margin-left: auto;
-  width: 25em;
-
+  width: 100%;
+  max-width:25em;
   margin: map-get($margins, m);
 
   content: map-get($imgs, mainTitle);
@@ -59,7 +62,7 @@ ul.navbar {
 }
 
 .flexbox-container {
-  height: 100%;
+  height: 100%; 
   display: flex;
   align-items: center;
   justify-content: center;
