--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -13,17 +13,17 @@ $imgs: (
 
 $margins: (
   defaultTop: 5em 0 0 0,
-  m: 5em 0 5em 0
+  m: 0em 0 5em 0
 );
 
 * {
   color: map-get($colors, font);
+  box-sizing: border-box;
 }
 
 html,
 body,
-#app,
-.home-page {
+#app {
   height: 100%;
   margin: 0;
 }
@@ -32,8 +32,11 @@ body {
   background: map-get($colors, background);
 }
 
-.home-page {
+.home-page,
+.biography {
   position: relative;
+  height: 100%;
+  margin: 0;
 }
 
 .mainTitle {
@@ -41,7 +44,7 @@ body {
   margin-right: auto;
   margin-left: auto;
   width: 100%;
-  max-width:25em;
+  max-width: 25em;
   margin: map-get($margins, m);
 
   content: map-get($imgs, mainTitle);
@@ -49,6 +52,7 @@ body {
 
 ul.navbar {
   display: flex;
+  align-items: center;
   list-style-type: none;
   padding: 0;
 
@@ -61,8 +65,14 @@ ul.navbar {
   }
 }
 
+.brand {
+  content: map-get($imgs, mainTitle);
+  width: 100%;
+  max-width: 5em;
+}
+
 .flexbox-container {
-  height: 100%; 
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,4 +81,72 @@ ul.navbar {
 
 h3 {
   margin: 0;
+}
+
+.textbox {
+  max-width: 75%;
+  width: 45em;
+}
+
+.m-t-3 {
+  margin-top: 3em;
+}
+
+.text-justified {
+  text-align: justify;
+}
+
+.primary-link {
+  text-decoration: none;
+}
+
+header {
+  z-index: 1001;
+  display: flex;
+  position: fixed;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  padding: 1em 2em;
+
+  nav {
+    top: 0;
+    ul {
+      list-style: none;
+
+      li {
+        padding: 1em;
+        margin-right: auto;
+        display: inline-block;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    nav {
+      ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        text-align: right;
+        li {
+          padding: 0.5em;
+          width: 100%;
+          display: block;
+        }
+      }
+    }
+  }
+
+  .home-page,
+  .biography {
+    margin-top: 3em;
+  }
+
+  .mainTitle {
+    padding: 0 1em 0 1em;
+  }
 }
