--- a/src/assets/scss/animations.scss
+++ b/src/assets/scss/animations.scss
@@ -14,3 +14,20 @@
     opacity: 1;
   }
 }
+
+.fade-out {
+  opacity: 2;
+  animation-name: fadeOutOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+  animation-duration: 2s;
+}
+
+@keyframes fadeOutOpacity {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
