--- a/src/assets/scss/page.scss
+++ b/src/assets/scss/page.scss
@@ -15,7 +15,7 @@ $imgs: (
 
 $margins: (
   defaultPage: 10em 0 0 0,
-  defaultPhonePage: 12em 0 0 0,
+  defaultPhonePage: 12em 0 3em 0,
   defaultTop: 5em 0 0 0,
   m: 0em 0 5em 0
 );
@@ -35,7 +35,6 @@ body,
 body {
   background: map-get($colors, background);
 }
-
 
 .mainTitle {
   position: relative;
@@ -134,6 +133,7 @@ header {
   overflow-x: hidden;
   width: 100%;
   margin: map-get($margins, defaultPage);
+  margin-bottom: 3em;
 
   .title {
     font-size: xx-large;
@@ -172,5 +172,20 @@ header {
 
   .page {
     margin: map-get($margins, defaultPhonePage);
+  }
+}
+
+footer {
+  z-index: -1;
+  bottom: 0;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+
+  nav {
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
   }
 }
